--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -615,6 +615,59 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
+
+.product-list {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 8vmin;
+}
+
+.wrapper {
+  width: calc(100% - 10vmin);
+  margin: 0 auto;
+  padding: 5vmin 0;
+}
+
+.view-detail-button {
+  border-radius: 4px;
+  background-color: #d64f00;
+  border: none;
+  color: #ffffff;
+  text-align: center;
+  font-size: 17px;
+  padding: 15px;
+  width: 150px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.view-detail-button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.view-detail-button span:after {
+  content: "\00bb";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.view-detail-button:hover span {
+  padding-right: 25px;
+}
+
+.view-detail-button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
